Fixed overflow vertical responsive

--- a/css/miguel.css
+++ b/css/miguel.css
@@ -2842,7 +2842,7 @@ div#ms-bullet-first:after{position: absolute;bottom: 0;left: 15%;content: "";dis
       #ms-onion-three-res{left:41%;}
       #ms-onion-two-res{left:37%;}
       #ms-container-egg2-home{top: -420px;left: 70%;}
-      #ms-seed-brocoli{left:55%;}
+      #ms-seed-brocoli{left:47%;}
       /* Qui sommes */
       #ms-cta-team{margin:60% auto 26% auto;}
       /* Demo culinaire */
